Feat: added login functionality

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "shortie",
+  "author": {
+    "name": "Fabricio Zacarías && Daniel Lozano",
+    "email": "no-reply@shortie.com.mx"
+  },
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
