--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^16.13.1",
     "react-qrcode-logo": "^2.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-s3": "^1.3.1",
+    "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
