--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-waypoint": "^9.0.3"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
