feat: change names

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shortie",
   "author": {
-    "name": "Fabricio Zacarías && Daniel Lozano",
+    "name": "Fabricio Zacarías & Daniel Lozano",
     "email": "no-reply@shortie.com.mx"
   },
   "version": "0.1.0",
