--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-awesome-slider": "^4.1.0",
@@ -23,7 +24,8 @@
     "react-s3": "^1.3.1",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
-    "react-waypoint": "^9.0.3"
+    "react-waypoint": "^9.0.3",
+    "sweetalert2": "^10.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
