--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^10.0.3",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
