--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-waypoint": "^9.0.3",
-    "sweetalert2": "^10.6.1"
+    "save": "^2.4.0",
+    "sweetalert2": "^10.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
