--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-qrcode-logo": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-s3": "^1.3.1",
