fix: changed alpha to beta things, and url problems

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://alpha.shortie.com.mx --acl public-read"
+    "deploy": "aws s3 sync build/ s3://beta.shortie.com.mx --acl public-read"
   },
   "eslintConfig": {
     "extends": "react-app"
